--- a/test-output/index.html
+++ b/test-output/index.html
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="W_tests.W_RegistrationTest" hash-for-method="verifyRegistrationInvalidPassTest">verifyRegistrationInvalidPassTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="W_tests.W_MyAccountSettingsTest" hash-for-method="accountSignInTest">accountSignInTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">W_tests.W_RegistrationTest</span>
+              <span class="class-name">W_tests.W_MyAccountSettingsTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyRegistrationInvalidPassTest">
-                  </a> <!-- verifyRegistrationInvalidPassTest -->
-                  <span class="method-name">verifyRegistrationInvalidPassTest</span>
+                  <a name="accountSignInTest">
+                  </a> <!-- accountSignInTest -->
+                  <span class="method-name">accountSignInTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/ft/qmvsvdsx79j61h1p7cgn1kn00000gn/T/testng-eclipse--829151195/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/ft/qmvsvdsx79j61h1p7cgn1kn00000gn/T/testng-eclipse--1275146734/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +144,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;W_tests.W_RegistrationTest&quot;/&gt;
+      &lt;class name=&quot;W_tests.W_MyAccountSettingsTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,14 +186,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyRegistrationInvalidPassTest')
-data.setCell(0, 2, 'W_tests.W_RegistrationTest')
-data.setCell(0, 3, 47011);
+data.setCell(0, 1, 'accountSignInTest')
+data.setCell(0, 2, 'W_tests.W_MyAccountSettingsTest')
+data.setCell(0, 3, 17228);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 47 seconds</span>
+              <span class="suite-total-time">Total running time: 17 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,18 +219,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">W_tests.W_RegistrationTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">W_tests.W_MyAccountSettingsTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">SetUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">verifyRegistrationInvalidPassTest</span>
-                <span class="method-start">7090 ms</span>
+                <span class="method-name">accountSignInTest</span>
+                <span class="method-start">6914 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">54105 ms</span>
+                <span class="method-start">24146 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
