--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="be92ad">  <td>20/08/06 01:01:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;W_RegistrationTest.SetUp()[pri:0, instance:W_tests.W_RegistrationTest@64bfbc86]">&gt;&gt;SetUp</td> 
+<tr bgcolor="be92ad">  <td>20/08/09 22:23:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;W_MyAccountSettingsTest.SetUp()[pri:0, instance:W_tests.W_MyAccountSettingsTest@64bfbc86]">&gt;&gt;SetUp</td> 
 <td>&nbsp;</td>  <td>main@503195940</td>   <td></td> </tr>
-<tr bgcolor="be92ad">  <td>20/08/06 01:02:07</td>   <td>54104</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;W_RegistrationTest.tearDown()[pri:0, instance:W_tests.W_RegistrationTest@64bfbc86]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@503195940</td>   <td></td> </tr>
-<tr bgcolor="be92ad">  <td>20/08/06 01:01:20</td>   <td>7089</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="W_RegistrationTest.verifyRegistrationInvalidPassTest()[pri:4, instance:W_tests.W_RegistrationTest@64bfbc86]">verifyRegistrationInvalidPassTest</td> 
+<tr bgcolor="be92ad">  <td>20/08/09 22:23:41</td>   <td>6913</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="W_MyAccountSettingsTest.accountSignInTest()[pri:0, instance:W_tests.W_MyAccountSettingsTest@64bfbc86]">accountSignInTest</td> 
   <td>main@503195940</td>   <td></td> </tr>
+<tr bgcolor="be92ad">  <td>20/08/09 22:23:58</td>   <td>24146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;W_MyAccountSettingsTest.tearDown()[pri:0, instance:W_tests.W_MyAccountSettingsTest@64bfbc86]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@503195940</td>   <td></td> </tr>
 </table>
